/*
* TODO
*/

syntax = "proto3";

package morrisoncole.chat;

import "morrisoncole/chat/error.proto";
import "morrisoncole/chat/user.proto";

option java_package = "com.morrisoncole.chat";

service LoginService {
    rpc Login (LoginRequest) returns (LoginResponse) {} // TODO
}

message LoginRequest {
    User user = 1; // TODO
}

message LoginResponse {
    Error error = 1;
    int32 port = 2;
}