/*
* TODO
*/

syntax = "proto3";

package morrisoncole.chat;

import "morrisoncole/chat/login.proto";

option java_package = "com.morrisoncole.chat";

service SessionService {
    rpc StartSession (LoginRequest) returns (LoginResponse) {} // TODO sloppy to re-use the login types here...
}
